--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,63 +1,2 @@
-2.6.0:
-
-* #29 Update Akka from 2.5 to 2.6
-* #30 Support Scala 2.13
-
-2.5.0:
-
-* #27 Update Akka from 2.4.14 to 2.5.4
-
-2.4.0:
-
-* #23 Update Akka from 2.3.10 to 2.4.14
-
-2.3:
-
-* #22 Add Tell(name, msg) and Tell(name, props, msg)
-
-2.2:
-
-* #20 Combine RegisterByProps and RegisterByRef to make Register
-
-2.1:
-
-* #19 Add RegisterByRef
-
-2.0:
-
-* #17 Use "provided" for Akka dependencies
-
-1.9:
-
-* #16 Update Akka from 2.3.2 to 2.3.3
-
-1.8:
-
-* #10 Update Akka from 2.3.0 to 2.3.2
-
-1.7:
-* #7 Unify "register" and "lookup or create"
-* #8 Add registry name to log
-* #9 Cluster mode: stash messages until the registry is obtained
-
-1.6:
-* #5 Update Akka from 2.2.4 to 2.3.0
-
-1.5:
-* #1 Use immutable for handover data
-* #2 Update Akka from 2.2.3 to 2.2.4
-
-1.4:
-* Add RegisterByProps and RegisterBySystemAndProps
-
-1.3:
-* Update Akka from 2.2.1 to 2.2.3
-
-1.2:
-* Add support for "lookup or create actor" pattern
-
-1.1:
-* Better API, more similar to that of Erlang's global module
-
-1.0:
-* Initial release
+1.0.0:
+* Migrated from https://github.com/xitrum-framework/glokka 2.6.0
